improve bg color

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ form * {
 
 body {
 	font-family:Geneva, Tahoma, sans-serif;
-	background-color: honeydew;
+	background-color: #3498db;
 }
 
 #card {
